# CodeTheMachine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
CodeTheMachine_ao/: GUI.py  __init__.py  collectable.py  collider.py  config.py  controller.py  levels_manager.py  machine.py  main_simulator.py  tools.py  utils.py  vars.py  vector.py  visuals.py
Demos/: builtin_pid_demo.py  demo.py
drone_levels/: base_template.py  level_0.py  level_1.py  level_2.py  level_3.py  level_4.py  level_5.py
drone_levels_correction/: level_0.py  level_1.py  level_2.py  level_3.py  level_4.py  level_5.py
