[build-system]
requires = ["setuptools >= 77.0.3", "pygame >= 2.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CodeTheMachine_ao"
version = "0.2"
authors = [
  { name="Arthur Oudeyer", email="arthur.oudeyerpro@gmail.com" },
]
description = "A cool simulator where you program machines"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENCE.txt"]